# OS-Emulator

./: CMakeLists.txt  README.txt
include/: cpu.h  memory_allocator.h  process.h  scheduler.h  screen.h  shared_state.h
src/: config.txt  cpu.cpp  main.cpp  memory_allocator.cpp  process.cpp  scheduler.cpp  screen.cpp  shared_state.cpp
